RESOLVED FIXED132428
[iOS] audio and video should automatically play to active external device
https://bugs.webkit.org/show_bug.cgi?id=132428
Summary [iOS] audio and video should automatically play to active external device
Eric Carlson
Reported 2014-05-01 08:46:01 PDT
WebKit should tell AVFoundation to automatically switch to an external device when it is active and selected by the OS.
Attachments
Proposed patch. (1.83 KB, patch)
2014-05-01 08:51 PDT, Eric Carlson
no flags
Updated patch. (1.79 KB, patch)
2014-05-01 08:58 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2014-05-01 08:46:26 PDT
Eric Carlson
Comment 2 2014-05-01 08:51:48 PDT
Created attachment 230581 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2014-05-01 08:52:49 PDT
Attachment 230581 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4 2014-05-01 08:58:07 PDT
Created attachment 230582 [details] Updated patch.
Jer Noble
Comment 5 2014-05-01 15:24:25 PDT
Comment on attachment 230582 [details] Updated patch. r=me
WebKit Commit Bot
Comment 6 2014-05-01 15:55:08 PDT
Comment on attachment 230582 [details] Updated patch. Clearing flags on attachment: 230582 Committed r168125: <http://trac.webkit.org/changeset/168125>
WebKit Commit Bot
Comment 7 2014-05-01 15:55:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.