[iOS] audio and video should automatically play to active external device https://bugs.webkit.org/show_bug.cgi?id=132428

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer): Set
    AVPlayer.usesExternalPlaybackWhileExternalScreenIsActive.


Canonical link: https://commits.webkit.org/150479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168125 268f45cc-cd09-0410-ab3c-d52691b4dbfc